# Janus

./: .gitignore  LICENSE  README.md
janus_engine/janus/: CMakeLists.txt  __init__.py  janus.cpp  launch_janus.py
janus_engine/janus/api_service/: CMakeLists.txt  anthropic_protocol_test.cpp  anthropic_service_impl.cpp  anthropic_service_impl.h  anthropic_service_test.cpp  api_service.cpp  api_service.h  api_service_impl.h  call.cpp  call.h  chat_json_utils.h  chat_json_utils_test.cpp  chat_service_impl.cpp  chat_service_impl.h  completion_service_impl.cpp  completion_service_impl.h  embedding_output_builder.cpp  embedding_output_builder.h  embedding_service_impl.cpp  embedding_service_impl.h  image_generation_service_impl.cpp  image_generation_service_impl.h  janus_metrics.h  mm_service_utils.h  models_service_impl.cpp  models_service_impl.h  non_stream_call.h  openai_service_test.cpp  qwen3_rerank_service_impl.cpp  qwen3_rerank_service_impl.h  rec_completion_service_impl.cpp  rec_completion_service_impl.h  rerank_service_impl.cpp  rerank_service_impl.h  sample_service_impl.cpp  sample_service_impl.h  sample_service_impl_test.cpp  service_impl_factory.h  stream_call.h  stream_output_parser.cpp  (+2 more)
janus_engine/janus/c_api/: default.h  llm.h  rec.h  types.h
janus_engine/janus/c_api/internal/: helper.cpp  helper.h  llm.cpp  rec.cpp
janus_engine/janus/c_api/tools/: install.sh
janus_engine/janus/cc_api/: install.sh  internal.h  llm.cpp  llm.h  macros.h  types.h
janus_engine/janus/core/common/: constants.h  device_monitor.cpp  device_monitor.h  etcd_client.cpp  etcd_client.h  global_flags.cpp  global_flags.h  health_check_manager.h  help_formatter.h  instance_name.h  interruption_bus.h  macros.h  message.h  metrics.cpp  metrics.h  mspti_helper.cpp  mspti_helper.h  options.cpp  options.h  rate_limiter.cpp  rate_limiter.h  rate_limiter_test.cpp  rec_model_utils.h  types.h  version_singleton.h
janus_engine/janus/core/distributed_runtime/: CMakeLists.txt  collective_service.cpp  collective_service.h  comm_channel.cpp  comm_channel.h  disagg_pd_service.cpp  disagg_pd_service.h  disagg_pd_service_impl.cpp  disagg_pd_service_impl.h  dist_manager.cpp  dist_manager.h  dit_engine.cpp  dit_engine.h  dit_master.cpp  dit_master.h  engine.h  llm_engine.cpp  llm_engine.h  llm_master.cpp  llm_master.h  master.cpp  master.h  pd_ooc_service.cpp  pd_ooc_service.h  pd_ooc_service_impl.cpp  pd_ooc_service_impl.h  rec_engine.cpp  rec_engine.h  rec_master.cpp  rec_master.h  remote_worker.cpp  remote_worker.h  shm_channel.cpp  shm_channel.h  (+11 more)
janus_engine/janus/function_call/: CMakeLists.txt  base_format_detector.cpp  base_format_detector.h  core_types.h  deepseekv32_detector.cpp  deepseekv32_detector.h  deepseekv32_detector_test.cpp  deepseekv3_detector.cpp  deepseekv3_detector.h  deepseekv3_detector_test.cpp  function_call.h  function_call_parser.cpp  function_call_parser.h  glm45_detector.cpp  glm45_detector.h  glm45_detector_test.cpp  glm47_detector.cpp  glm47_detector.h  glm47_detector_test.cpp  kimik2_detector.cpp  kimik2_detector.h  kimik2_detector_test.cpp  qwen25_detector.cpp  qwen25_detector.h  qwen25_detector_test.cpp  qwen3_coder_detector.cpp  qwen3_coder_detector.h  qwen3_coder_detector_test.cpp  utils.cpp  utils.h
janus_engine/janus/models/: CMakeLists.txt  model_registry.cpp  model_registry.h  models.h
janus_engine/janus/parser/: detector_registry.cpp  detector_registry.h  reasoning_detector.cpp  reasoning_detector.h  reasoning_parser.cpp  reasoning_parser.h
janus_engine/janus/processors/: clip_image_processor.cpp  clip_image_processor.h  glm4v_image_processor.cpp  glm4v_image_processor.h  image_processor.cpp  image_processor.h  input_processor.h  minicpmv_image_processor.cpp  minicpmv_image_processor.h  pywarpper_image_processor.cpp  pywarpper_image_processor.h  qwen2_vl_image_processor.cpp  qwen2_vl_image_processor.h
janus_engine/janus/proto/: CMakeLists.txt  anthropic.proto  chat.proto  common.proto  completion.proto  disagg_pd.proto  embedding.proto  embedding_data.proto  image_generation.proto  janus_service.proto  models.proto  mooncake_transfer_engine.proto  multimodal.proto  rec.proto  rerank.proto  sample.proto  tensor.proto  worker.proto  xservice.proto  xtensor_dist.proto
janus_engine/janus/pybind/: CMakeLists.txt  args.py  bind.cpp  embedding.py  llm.py  mm_utils.py  params.py  vlm.py
janus_engine/janus/server/: CMakeLists.txt  health_reporter.h  janus_server.cpp  janus_server.h  janus_server_registry.cpp  janus_server_registry.h
janus_service/: .gitignore  CMakeLists.txt  vcpkg.json
janus_service/janus_service/: CMakeLists.txt  master.cpp  master.h
janus_service/janus_service/chat_template/: jinja_chat_template.cpp  jinja_chat_template.h  jinja_chat_template_test.cpp
janus_service/janus_service/common/: CMakeLists.txt  call_data.h  closure_guard.h  concurrent_queue.h  global_gflags.cpp  global_gflags.h  hash_util.cpp  hash_util.h  json_reader.cpp  json_reader.h  macros.h  options.h  slice.h  threadpool.cpp  threadpool.h  time_predictor.cpp  time_predictor.h  types.h  utils.cpp  utils.h
janus_service/janus_service/http_service/: CMakeLists.txt  main.cpp  request_tracer.cpp  request_tracer.h  service.cpp  service.h
janus_service/janus_service/proto/: CMakeLists.txt  disagg_pd_link.proto  janus_http_service.proto  janus_rpc_service.proto
janus_service/janus_service/request/: request.h
janus_service/janus_service/rpc_service/: CMakeLists.txt  client.cpp  client.h  main.cpp  rpc_service_test.cpp  service.cpp  service.h
janus_service/janus_service/scheduler/: CMakeLists.txt  response_handler.cpp  response_handler.h  scheduler.cpp  scheduler.h
janus_service/janus_service/tokenizer/: fast_tokenizer.cpp  fast_tokenizer.h  sentencepiece_tokenizer.cpp  sentencepiece_tokenizer.h  tiktoken_tokenizer.cpp  tiktoken_tokenizer.h  tokenizer.h  tokenizer_args.cpp  tokenizer_args.h  tokenizer_factory.cpp  tokenizer_factory.h
janus_service/test/: async_traffic_sender.py  slo_test.py  tidal_two_test.py
janus_service/test/traffic_designer/: traffic_sender.py
(+904 files in other folders)
